--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,10 +12,10 @@ source:
   url: https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-{{ maj_min_ver }}/hdf5-{{ version }}/src/hdf5-{{ version }}.tar.gz
   sha256: 048a9d149fb99aaa1680a712963f5a78e9c43b588d0e79d55e06760ec377c172
   patches:
-    # Patches the test suite to skip the cache, cache_image, and fheap tests
-    # This test has been found to rather resource intensive.
+    # Patches the test suite to skip the cache, cache_image, and fheap tests.
+    # These tests have been found to be rather resource intensive.
     # In particular, it caused Travis CI's Mac builds to hang.
-    # Given that we simply skip the test on all platforms.
+    # Given that we simply skip the tests on all platforms.
     - test_Makefile.in.patch
     # Disable shared Fortran API building on OSX
     - osx_configure.patch  # [osx]
