Temporarily turn off CLI checks
Not sure why they're not working at present; I want to see if the
library checks after them work.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -89,7 +89,7 @@ test:
     ] %}
     {% for each_hdf5_cmd in hdf5_cmds %}
     - command -v {{ each_hdf5_cmd }}        # [unix]
-    - where {{ each_hdf5_cmd }}             # [win]
+    # - where {{ each_hdf5_cmd }}             # [win]
     {% endfor %}
 
     # Verify libraries.
